test/scc_test/decl/semantic-errors/020.a
020.t:4:9: error: invalid storage class for 'a'